# sport-suggest-mcp

./: README.md  pyproject.toml
src/sport_suggest_mcp/: __init__.py  server.py  tools.py
